--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hola in
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="utf-8" />
+	<title>Zar2: La nueva aplicación</title>
+	<link rel="stylesheet" href="css/zar2.css" />
+</head>
+<body>
+	<header>
+		<div class="logo">
+			<img src="imagenes/logo.png" alt="Zar2" />
+		</div>
+		<div class="titular">
+			<h1 class="titulo">
+				Zar2: Comunidad prof
+			</h1>
+			<div>
+				<a class="filtro" href="#">
+					Responsive Design
+				</a>
+				<a class="publicar" href="#">
+					Publicar
+				</a>
+			</div>
+		</div>
+		<div class="usuario">
+		</div>
+	</header>
+	<nav>
+	</nav>
+	<section>
+	</section>
+	<footer>
+		<h3>
+			<strong>Powered by Platzi</strong>
+			<span class="mejor">
+				mejorando.la 2013
+			</span>
+		</h3>
+	</footer>
+</body>
+</html>
